--- a/backend/package.json
+++ b/backend/package.json
@@ -4,26 +4,26 @@
   "description": "Backend API for Repair Tracking System",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js",
+    "start": "node src/app-simple.js",
     "dev": "nodemon src/app.js",
-    "build": "echo 'No build required'",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "compression": "^1.8.0",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "express-rate-limit": "^7.5.1",
-    "express-validator": "^7.2.1",
-    "firebase-admin": "^11.11.1",
-    "helmet": "^7.2.0",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
+    "dotenv": "^16.3.1",
+    "firebase-admin": "^11.11.0",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "express-validator": "^7.0.1",
+    "express-rate-limit": "^7.1.3",
+    "compression": "^1.7.4"
   },
   "devDependencies": {
     "eslint": "^9.30.1",
