--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,11 @@
   "name": "repair-tracking-backend",
   "version": "1.0.0",
   "description": "Backend API for Repair Tracking System",
-  "main": "src/app.js",
+  "main": "src/app-simple.js",
   "scripts": {
     "start": "node src/app-simple.js",
-    "dev": "nodemon src/app.js",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "dev": "nodemon src/app-simple.js",
+    "test": "echo \"No tests specified\""
   },
   "engines": {
     "node": ">=18.0.0"
@@ -15,29 +14,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "dotenv": "^16.3.1",
-    "firebase-admin": "^11.11.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "express-validator": "^7.0.1",
-    "express-rate-limit": "^7.1.3",
-    "compression": "^1.7.4"
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "eslint": "^9.30.1",
-    "jest": "^30.0.4",
-    "nodemon": "^3.1.10",
-    "supertest": "^7.1.3"
-  },
-  "keywords": [
-    "repair",
-    "tracking",
-    "api",
-    "express",
-    "firebase"
-  ],
-  "author": "Your Name",
-  "license": "MIT"
+    "nodemon": "^3.1.10"
+  }
 }
