--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "Repair tracking system",
   "main": "backend/src/app-simple.js",
   "scripts": {
-    "start": "cd backend && node src/app-simple.js",
+    "start": "node backend/src/app-simple.js",
     "build": "cd backend && npm install",
     "dev": "cd backend && npm run dev"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1"
   }
 }
